fix navbar jump out issue when clicking on filter selector (scrollbar still removed)

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@
 
 body {
   font-family: "Inter", sans-serif;
+  @apply !min-w-full;
 }
 
 @layer utilities {
